--- a/src/ihm/FXMLDocument.fxml
+++ b/src/ihm/FXMLDocument.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="510.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxexploration01.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="510.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ihm.FXMLDocumentController">
     <children>
         <Button fx:id="button1" layoutX="636.0" layoutY="360.0" onAction="#handleButtonAction1" text="Je te cliquerai pas" textAlignment="CENTER" textFill="#b51919">
          <padding>
